# bluenote

./: BCL.md  COOKIE_IMPLEMENTATION.md  Cargo.toml  Cargo.toml.backup  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
scripts/: install-hooks.sh
src/: http.rs  ini.rs  lib.rs
tests/: integration_tests.rs
