[package]
name = "bluenote"
version = "0.1.2"
authors = ["Sam Wisely <samwisely75@gmail.com>"]
description = "Profile-based HTTP client library with configuration management"
edition = "2021"
license = "Elastic-2.0"
repository = "https://github.com/samwisely75/bluenote"
homepage = "https://github.com/samwisely75/bluenote"
readme = "README.md"
keywords = ["http", "client", "profiles", "config", "api"]
categories = ["web-programming::http-client", "config"]

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json", "gzip", "deflate", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["full"] }
regex = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
zstd = "0.13"
encoding_rs = "0.8"
bytes = "1.0"
rust-ini = "0.21"
shellexpand = "3.0"

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
# Enable profile configuration from INI files
ini-profiles = []
# Enable JSON profile configuration  
json-profiles = []
